Backend: Adds API for getting already reserved seats
Adds another endpoint to /reservations that lets the user retrieve
already reserved seats for specified screening. Briefly tested, it seems
to work.
