# movietown/docs/swagger.json
@@ -962,6 +962,38 @@
                 }
             }
         },
+        "/api/v1/reservations/seats/{screening_id}": {
+            "get": {
+                "description": "get takenSeats by customer_id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "reservations"
+                ],
+                "summary": "Show reserved seats for screening",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "format": "int",
+                        "description": "search reserved seats for screening_id",
+                        "name": "screening_id",
+                        "in": "path"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.takenSeats"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/reservations/types": {
             "get": {
                 "description": "Show reservations types",
@@ -1423,6 +1455,17 @@
                 }
             }
         },
+        "api.takenSeats": {
+            "type": "object",
+            "properties": {
+                "taken_seat_ids": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
+                }
+            }
+        },
         "model.Customer": {
             "type": "object",
             "properties": {
@@ -1722,14 +1765,14 @@
                 "mm_type": {
                     "$ref": "#/definitions/model.MovieMovieType"
                 },
-                "movieHallId": {
-                    "type": "integer"
-                },
                 "movieMovieTypeId": {
                     "type": "integer"
                 },
                 "movie_hall": {
                     "$ref": "#/definitions/model.MovieHall"
+                },
+                "movie_hall_id": {
+                    "type": "integer"
                 },
                 "start_of_screening": {
                     "type": "string"
@@ -1739,7 +1782,7 @@
         "model.Seat": {
             "type": "object",
             "properties": {
-                "column": {
+                "col": {
                     "type": "integer"
                 },
                 "id": {
@@ -1748,10 +1791,7 @@
                 "movieHall": {
                     "$ref": "#/definitions/model.MovieHall"
                 },
-                "movieHallId": {
-                    "type": "integer"
-                },
-                "number": {
+                "movie_hall_id": {
                     "type": "integer"
                 },
                 "row": {
